@@ -32,9 +32,8 @@ class NewPagesPage extends QueryPage {
 	}
 
 	function getSQL() {
-		global $wgUser, $wgOnlySysopsCanPatrol, $wgUseRCPatrol;
-		$usepatrol = ( $wgUseRCPatrol && $wgUser->isLoggedIn() &&
-		               ( $wgUser->isAllowed('patrol') || !$wgOnlySysopsCanPatrol ) ) ? 1 : 0;
+		global $wgUser, $wgUseRCPatrol;
+		$usepatrol = ( $wgUseRCPatrol && $wgUser->isAllowed( 'patrol' ) ) ? 1 : 0;
 		$dbr =& wfGetDB( DB_SLAVE );
 		extract( $dbr->tableNames( 'recentchanges', 'page', 'text' ) );
 
@@ -60,7 +59,7 @@ class NewPagesPage extends QueryPage {
 	}
 
 	function formatResult( $skin, $result ) {
-		global $wgLang, $wgContLang, $wgUser, $wgOnlySysopsCanPatrol, $wgUseRCPatrol;
+		global $wgLang, $wgContLang, $wgUser, $wgUseRCPatrol;
 		$u = $result->user;
 		$ut = $result->user_text;
 
@@ -80,17 +79,14 @@ class NewPagesPage extends QueryPage {
 		# Since there is no diff link, we need to give users a way to
 		# mark the article as patrolled if it isn't already
 		$ns = $wgContLang->getNsText( $result->namespace );
-		if ( $wgUseRCPatrol && !is_null ( $result->usepatrol ) && $result->usepatrol &&
-		     $result->patrolled == 0 && $wgUser->isLoggedIn() &&
-		     ( $wgUser->isAllowed('patrol') || !$wgOnlySysopsCanPatrol ) )
+		if( $wgUseRCPatrol && !is_null( $result->usepatrol ) && $result->usepatrol && $result->patrolled == 0 && $wgUser->isAllowed( 'patrol' ) ) {
 			$link = $skin->makeKnownLink( $ns . ':' . $result->title, '', "rcid={$result->rcid}" );
-		else
+		} else {
 			$link = $skin->makeKnownLink( $ns . ':' . $result->title, '' );
+		}
 
 		$s = "{$d} {$link} ({$length}) . . {$ul}";
-
 		$s .= $skin->commentBlock( $result->comment );
-
 		return $s;
 	}
 
